--- a/wi.html
+++ b/wi.html
@@ -229,12 +229,12 @@
         </div>
         <nav>
             <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#services">Services</a></li>
-                <li><a href="#portfolio">Portfolio</a></li>
-                <li><a href="#contact">Contact</a></li>
-                <li><a href="#blog">Blog</a></li>
+                <li><a href="wi.html">Home</a></li>
+                <li><a href="nutrition1.html">Nutrition</a></li>
+                <li><a href="registration.html">Exercise Routine</a></li>
+                <li><a href="index.html">Fitness Tips</a></li>
+                <li><a href="Facilities.html">Features</a></li>
+                <li><a href="Blog.html">Blogs</a></li>
             </ul>
         </nav>
         <!-- Toggle button to open/close navigation bar -->
@@ -275,9 +275,10 @@
 
                 <div card="card-decription">
                     <h2>Who are we?</h2>
-                    <p>we support Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt, quibusdam adipisci
-                        mollitia, quos temporibus voluptates hic aliquid quia sit corrupti asperiores nulla at quod unde
-                        dolorem nostrum suscipit laborum explicabo!</p>
+                    <p>We are a company that is dedicated to improving the wellness of desk workers. We understand that sitting at a desk 
+                        for long hours can take a toll on one's physical and mental health. That's why we have created a range of products and services that are designed to help desk workers stay active, healthy, and comfortable while they work.<br><br>
+
+Our team is made up of experts in ergonomics, physical therapy, and wellness, who have come together to create innovative solutions for desk workers. We believe that by promoting a healthier work environment, we can help people lead happier and more productive lives.</p>
                 </div>
             </div>
             <div class="t-card hidden">
@@ -286,15 +287,10 @@
                 </div>
 
                 <div card="card-decription">
-                    <h2>what happens when you dont move for long?</h2>
-                    <p>The basic recipe for muscular imbalance is this: You have a short, tight muscle and a longer,
-                        weaker muscle that opposes it. For example, the muscles of the chest oppose the upper back
-                        muscles because they perform opposite functions, push and pull. Those who sit for long periods
-                        of time tend to hunch their shoulders and head forward, causing tight chest muscles and weaker
-                        upper-back muscles. The hip flexors on your upper thigh also shorten while sitting and pull the
-                        pelvis forward, causing lower back pain. People with this type of muscular imbalance typically
-                        stand or sit with the head pulled forward and the back rounded. This type of poor posture is
-                        called kyphosis</p>
+                    <h2>Stand Up for Your Health: Our Mission to Revolutionize Desk Worker Wellness</h2>
+                    <p>We're on a mission to empower people to take control of their health and wellbeing while they work.
+                    Our team of experts in ergonomics, physical therapy, and wellness, will work with you to find the best solution to improve
+                        your overall health and wellbeing. Stand Up for Your Health with us and join our mission to revolutionize the way desk workers think about their health and wellbeing.</p>
                 </div>
             </div>
             <div class="t-card hidden">
@@ -303,13 +299,9 @@
                 </div>
 
                 <div card="card-decription">
-                    <h2>What can you do to prevent it?</h2>
-                    <p>In the likely event that quitting your job is not a possibility, you can strengthen the weak
-                        muscles and stretch the tight muscles to relieve aches and pains. For starters, make sure you
-                        get up every 20 minutes or so, and take a short walk or stretch to get yourself out of that
-                        seated position. Also, make sure when you are sitting, you’re in the proper position. Your eyes
-                        should be level with your computer screen, not looking down, you should be sitting up straight,
-                        not slouching. Your elbows should be at a 90-degree angle while you’re using the mouse.</p>
+                    <h2>Take the First Step with Us!</h2>
+                    <p>We believe that taking small, incremental steps is the key to achieving lasting change, and we're here to support you every step of the way. From ergonomic assessments and physical therapy,
+                        to wellness programs and education, we're committed to helping you improve your overall health and well-being.</p>
                 </div>
             </div>
 
