--- a/Blog.html
+++ b/Blog.html
@@ -12,9 +12,9 @@
 
         <a href="#" class="logo"><span>Work</span>Well</a>
         <nav class="navbar">
-            <a href="#home">Home</a>
-            <a href="#facilities">Facilities</a>
-            <a href="#subscription">Subscription</a>
+            <a href="wi.html">Home</a>
+            <a href="Facilities.html">Facilities</a>
+            <a href="nutrition1.html">Nutrition</a>
 
 
 
