--- a/nutiriton1.html
+++ b/nutiriton1.html
@@ -14,10 +14,10 @@
             <div class="toggle"></div> 
             <nav>
                 <ul>
-                    <li><a href= "http://www.example.com">Home</a></li>
-                    <li><a href= "http://www.example.com">About</a></li>
-                    <li><a href= "http://www.example.com">Team</a></li>
-                    <li><a href= "http://www.example.com">Contact Us</a></li>
+                    <li><a href= "wi.html">Home</a></li>
+                    <li><a href= "registration.html">Exercise Routines</a></li>
+                    <li><a href= "Facilities.html">Facilities</a></li>
+                    <li><a href= "index.html">Fitness Tips</a></li>
                 </ul>
                 
             </nav>
