--- a/registration.html
+++ b/registration.html
@@ -182,12 +182,12 @@
         
             <nav>
                 <ul>
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#services">Services</a></li>
-                    <li><a href="#portfolio">Portfolio</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                    <li><a href="#blog">Blog</a></li>
+                    <li><a href="wi.html">Home</a></li>
+                    <li><a href="nutrition1.html">Nutrition</a></li>
+                    <li><a href="registration.html">Exercise Routines</a></li>
+                    <li><a href="index.html">Fitness tips</a></li>
+                    <li><a href="Facilities.html">Features</a></li>
+                    <li><a href="Blog.html">Blog</a></li>
                 </ul>
             </nav>
     
@@ -266,9 +266,9 @@
                     </div>
                     <h2>Follow along videos</h2>
                     <div class="image-container">
-                        <a href="https://www.youtube.com/watch?v=2pLT-olgUJs"><img src="C:\Users\abbav\Desktop\ass\hackathon\choleting1.jpg" alt="image1"></a>
-                        <a href="https://www.youtube.com/watch?v=-p0PA9Zt8zk"><img src="C:\Users\abbav\Desktop\ass\hackathon\hackpg1.jpg" alt="image2"></a>
-                        <a href="https://www.youtube.com/watch?v=M0uO8X3_tEA"><img src="C:\Users\abbav\Desktop\ass\hackathon\choleting1.jpg" alt="image3"></a>
+                        <a href="https://www.youtube.com/watch?v=2pLT-olgUJs"><img src="choleting1.jpg" alt="image1"></a>
+                        <a href="https://www.youtube.com/watch?v=-p0PA9Zt8zk"><img src="hackpg1.jpg" alt="image2"></a>
+                        <a href="https://www.youtube.com/watch?v=M0uO8X3_tEA"><img src="choleting1.jpg" alt="image3"></a>
                     </div>
 
 
